--- a/style.css
+++ b/style.css
@@ -23,10 +23,13 @@ ul{
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin-top: 0;
+    padding-top: 10px;
 }
 
 nav li{
     height: 50px;
+    margin: 0;
 }
 
 nav a{
@@ -50,6 +53,7 @@ nav li:last-child {
     display: none;
 }
 
+
 /* MAIN CONTENT HERE */
 main {
     padding: 50px;
@@ -60,6 +64,31 @@ main {
     justify-content: center;
     flex-wrap: wrap;
     gap: 50px;
+}
+
+
+.sidebar{
+    position: fixed;
+    top: 0; 
+    right: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(12px);
+    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+
+.sidebar li{
+    width: 100%;
+  }
+
+.sidebar li:first-child {
+    width: 50%;
 }
 
 .card {
@@ -87,7 +116,7 @@ p {
 }
 
 @media screen and (max-width: 768px) {
-    nav a {
+    .navbar a {
         font-size: 3vw;
     }
 }
